<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name"> WM Campus Map</string>
    <string name="search_hint">Search Building Name</string>
    <string name="navText">Navigate To:</string>
    <!-- basemap urls -->
    <string name="WORLD_STREET_MAP">http://services.arcgisonline.com/ArcGIS/rest/services/World_Street_Map/MapServer</string>
    <string name="WORLD_TOPO_MAP">http://services.arcgisonline.com/ArcGIS/rest/services/World_Topo_Map/MapServer</string>
    <string name="WORLD_NATGEO_MAP">http://services.arcgisonline.com/ArcGIS/rest/services/NatGeo_World_Map/MapServer</string>
    <string name="OCEAN_BASEMAP">http://services.arcgisonline.com/ArcGIS/rest/services/Ocean_Basemap/MapServer</string>
    <!-- basemap menu items -->
    <string name="StreetMapMenu">World Street Map</string>
    <string name="TopoMenu">World Topo</string>
    <string name="NatGeoMenu">NatGeo World Map</string>
    <string name="OceanMenu">Ocean Basemap</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="expand">Expand Search</string>
    <string name="collapse">Collapse Search</string>
    <string name="title_activity_navigate">NavigateActivity</string>
    <string name="tribeSignal">Tribe Signal</string>
    <string name="pdf">Campus PDF</string>
    <string name="title_activity_tribe_signal">Tribe Signal</string>
    <string name="toggleL">Status: Sharing On</string>
    <string name="toggleB">Turn Sharing Off</string>
    <string name="title_activity_login">Log In</string>
    <string name="username">Username</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last name</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="logout">Logout</string>
    <string name="error_passwords_not_match">The passwords don\'t match!</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="title_activity_make_friends">MakeFriendsActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="verifyPassword">Verify Password</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="register">Register</string>
        <string name="existAccount">Already registered? Log in here</string>

</resources>
