<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
<item 
    	android:id="@+id/action_expand"
          android:icon="@drawable/ic_action_expand"
          android:showAsAction="ifRoom"
          android:title="@string/expand" />

<item 
    	android:id="@+id/action_collapse"
          android:icon="@drawable/ic_action_collapse"
          android:showAsAction="always"
          android:title="@string/collapse" />

<item 
    	android:id="@+id/pdfcampus"
    	android:text="@string/pdf"
         android:showAsAction="never"
          android:title="@string/pdf" />
<item 
    	android:id="@+id/signal"
    	android:text="@string/tribeSignal"
         android:showAsAction="never"
          android:title="@string/tribeSignal" />
</menu>
